cleaned up some tutorial notes

--- a/rad/notebooks/sandbox_agents_intro.ipynb
+++ b/rad/notebooks/sandbox_agents_intro.ipynb
@@ -12,8 +12,7 @@
    "metadata": {},
    "source": [
     "In this notebook, we will... \n",
-    "* Play with llama index tutorials \n",
-    "* Set up some initial agents"
+    "* Play with llama index tutorials "
    ]
   },
   {
@@ -95,40 +94,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## some questions "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# key components \n",
-    "What resources do I have for my loved one? \n",
-    "\n",
-    "Resource \n",
-    "- Organization \n",
-    "- Eligibility\n",
-    "- Application \n",
-    "\n",
-    "Application \n",
-    "- Form \n",
-    "- Deadline \n",
-    "- Required Documents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## back to anchoring here!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# questions\n",
     "* how do we orchestrate llama index agents (if we want or need to) \n",
     "\n",
@@ -136,18 +101,6 @@
     "* llama index agents are probably sufficient for routing workflows \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Scratch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
